--- a/src/main/webapp/pages/setor/edit.xhtml
+++ b/src/main/webapp/pages/setor/edit.xhtml
@@ -33,7 +33,7 @@
         <p:message for="nivel"/>
 
         <uivah:autoComplete id="setor" value="#{setorProtocoloCtrl.item.setorMV}" label="Setor"
-                            controller="#{setorController}" completeMethod="completeMethod"
+                            controller="#{setorCtrl}" completeMethod="completeMethod"
                             converter="#{setorConverter}" itemLabel="labelForSelectItem"
                             placeholder="Cód./Nome">
           <p:column>
