--- a/src/main/webapp/pages/user/detail.xhtml
+++ b/src/main/webapp/pages/user/detail.xhtml
@@ -4,8 +4,8 @@
   xmlns:ui="http://java.sun.com/jsf/facelets">
 
   <f:metadata>
-    <f:viewParam name="id" value="#{userController.id}" />
-    <f:viewAction action="#{userController.onLoadForDetail}" />
+    <f:viewParam name="id" value="#{userCtrl.id}" />
+    <f:viewAction action="#{userCtrl.onLoadForDetail}" />
   </f:metadata>
 
   <ui:include src="edit.xhtml"/>
