--- a/src/main/webapp/pages/user/list.xhtml
+++ b/src/main/webapp/pages/user/list.xhtml
@@ -7,7 +7,7 @@
   <ui:define name="content">
     <h:form id="form">
       <p:panel header="Usuários">
-        <vah:dataTable id="dataTable" controller="#{userController}"
+        <vah:dataTable id="dataTable" controller="#{userCtrl}"
                          renderDeleteAction="false" renderAddBtn="false">
           <p:column sortBy="#{item.id}" headerText="Id"
                     style="text-align: left;" width="100">
