--- a/src/main/webapp/resources/vah/dataTable.xhtml
+++ b/src/main/webapp/resources/vah/dataTable.xhtml
@@ -24,19 +24,21 @@
     <h:panelGroup id="panel" layout="block"
                   style="margin-bottom: 20px; position: relative;">
       <p:focus context="panel"/>
-      <h:panelGroup rendered="#{cc.attrs.renderDefaultFilter}" layout="block">
-        <p:inputText id="searchInput"
-                     value="#{cc.attrs.controller.searchTerm}"
-                     placeholder="#{cc.attrs.placeholder == null ? 'Digite o termo...' : cc.attrs.placeholder}"
-                     style="min-width: 250px;"/>
-        <p:commandButton id="searchBtn" value="Buscar"
-                         action="#{cc.attrs.controller.prepareSearch}" icon="fa fa-search"
-                         ajax="true" process="@form"
-                         update="table"
-                         title="Procurar #{cc.attrs.controller.entityName}"
-                         style="margin-left: 10px;"/>
+      <h:panelGroup id="searchParams">
+        <h:panelGroup rendered="#{cc.attrs.renderDefaultFilter}" layout="block">
+          <p:inputText id="searchInput"
+                       value="#{cc.attrs.controller.searchTerm}"
+                       placeholder="#{cc.attrs.placeholder == null ? 'Digite o termo...' : cc.attrs.placeholder}"
+                       style="min-width: 250px;"/>
+          <p:commandButton id="searchBtn" value="Buscar"
+                           action="#{cc.attrs.controller.prepareSearch}" icon="fa fa-search"
+                           ajax="true" process="searchParams"
+                           update="@form"
+                           title="Procurar #{cc.attrs.controller.entityName}"
+                           style="margin-left: 10px;"/>
+        </h:panelGroup>
+        <composite:renderFacet name="customFilters"/>
       </h:panelGroup>
-      <composite:renderFacet name="customFilters"/>
       <p:commandButton value="#{empty cc.attrs.addLabel ? 'Adicionar' : cc.attrs.addLabel}"
                        process="@this"
                        action="#{cc.attrs.controller.add}"
